--- a/Hideo_Kojima_Website/galeria.html
+++ b/Hideo_Kojima_Website/galeria.html
@@ -102,11 +102,20 @@
                     <figcaption>Cliff Unger</figcaption>
                     <img src="images/mads1.jpeg" alt="mads1">
                 </figure>
-    
             </div>
         </section>
-    </main>
+        <section style="margin-top: 3rem;">
+            
+            <h2 style="text-align: center;">Trailer Death Stranding 2</h2>
+            <p style="text-align: center; margin-bottom: 1.5rem;">Najnowszy projekt studia KojimaProduction. Warto wspomnieć, że Hideo Kojima nie zwalnia
+                tempa i zapowiedział już nowe produkcje. Są to m.in "PSYHINT" - pierwsza gra rozwijana dla PS6 oraz mrożący krew w żyłach horror o tytule "OD".
+            </p>
 
+            <div class="video-responsive-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wbLstJHlC4U?si=R_1gLtWzPJ16GH5N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </iframe>
+            </div>
+    </main>
     <footer>
         <p>Mateusz Wróbel</p>
     </footer>
