--- a/Hideo_Kojima_Website/index.html
+++ b/Hideo_Kojima_Website/index.html
@@ -14,7 +14,8 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="galeria.html">Galeria</a> <a href="kontakt.html">Kontakt</a>
+        <a href="galeria.html">Galeria</a> 
+        <a href="kontakt.html">Kontakt</a>
     </nav>
 
     <main>
