--- a/Hideo_Kojima_Website/kontakt.html
+++ b/Hideo_Kojima_Website/kontakt.html
@@ -10,7 +10,7 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="Galeria.html">Galeria</a>
+        <a href="galeria.html">Galeria</a>
         <a href="kontakt.html">Kontakt</a>
     </nav>
 
