--- a/Hideo_Kojima_Website/kontakt.html
+++ b/Hideo_Kojima_Website/kontakt.html
@@ -20,9 +20,13 @@
             <p>Masz pytania lub sugestie? Wypełnij formularz poniżej.</p>
             <form action="#" method="POST"> <div>
                     <label for="email">E-Mail:</label>
-                    <input type="email" id="email" name="email" placeholder="Wpisz swój adres e-mail..." required
-                    pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
-                    title="Proszę podać poprawny adres e-mail (musi zawierać @ oraz kropkę)">>
+                    <input type="text" 
+                        id="email" 
+                        name="email" 
+                        placeholder="Wpisz swój adres e-mail..." 
+                        required
+                        pattern=".*@.*"
+                        title="Proszę podać poprawny adres e-mail (musi zawierać @)">
                 </div>
                 <div>
                     <label for="temat">Temat wiadomości:</label>
